<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:background="@color/head_Color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="4dp"
        >


        <ImageView
            android:layout_width="75.dp"
            android:layout_height="75dp"
            android:scaleType="fitCenter"
            android:src="@drawable/tus_peliculas__blanco"
            android:contentDescription="Logo"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4.dp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TituloPrincipal"
            android:fontFamily="serif"
            android:textSize="23.sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/PrimaryColor"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/PrimaryColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="70dp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="16.dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
    <TextView
        android:id="@+id/error"
        android:visibility="invisible"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/Error"
        android:textSize="15.dp"
        android:background="@color/white"
        android:textColor="@color/error"
        android:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />
    <Button
        android:id="@+id/botonReintentar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/Reintentar"
        android:backgroundTint="@color/grenn"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>