<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/black"
            android:id="@+id/detailsMovie">
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="4dp"
                >


                <ImageView
                    android:layout_width="75.dp"
                    android:layout_height="75dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tus_peliculas__blanco"
                    android:contentDescription="Logo"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="4.dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TituloPrincipal"
                    android:fontFamily="serif"
                    android:textSize="23.sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/PrimaryColor"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300.dp"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                android:id="@+id/logoDecoracion"
                android:layout_width="50.dp"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tus_peliculas__blanco"
                android:contentDescription="Logo"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4.dp"
                app:layout_constraintTop_toBottomOf="@+id/image"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:letterSpacing="0.3"
                android:fontFamily="sans-serif-black"
                android:text="PELICULA"
                app:layout_constraintStart_toEndOf="@+id/logoDecoracion"
                app:layout_constraintTop_toBottomOf="@+id/image"
                />
            <TextView
                android:id="@+id/TituloMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/TituloPrincipal"
                android:fontFamily="sans-serif-black"
                android:textStyle="bold"
                android:textSize="28.sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/logoDecoracion"
                />
            <TextView
                android:id="@+id/duracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginLeft="7dp"
                android:letterSpacing="0.1"
                android:fontFamily="sans-serif-medium"
                android:text="120 min"
                app:layout_constraintStart_toEndOf="@+id/TituloMovie"
                app:layout_constraintTop_toBottomOf="@+id/logoDecoracion"
                />
            <TextView
                android:id="@+id/Lansamiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="sans-serif-medium"
                android:text="2024-06-25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TituloMovie"
                />
            <TextView
                android:id="@+id/apto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/fondo_redondeado"
                android:layout_marginLeft="7dp"
                android:clipToOutline="true"
                android:fontFamily="sans-serif-medium"
                android:text="18+"
                app:layout_constraintStart_toEndOf="@id/Lansamiento"
                app:layout_constraintTop_toBottomOf="@+id/TituloMovie"
                />
            <TextView
                android:id="@+id/descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="14dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/Lansamiento"
                android:text="@string/descripcionLorem"
                />
            <TextView
                android:id="@+id/textoGenero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/generos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion"
                />
            <TextView
                android:id="@+id/generos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-medium"
                android:text=" terror, ficcion, drama"
                app:layout_constraintStart_toEndOf="@+id/textoGenero"
                app:layout_constraintTop_toBottomOf="@+id/descripcion"
                />
            <TextView
                android:id="@+id/textoValoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/valoracion"
                app:layout_constraintTop_toBottomOf="@+id/textoGenero"
                />
            <TextView
                android:id="@+id/valoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:text="7.5"
                app:layout_constraintStart_toEndOf="@+id/textoValoracion"
                app:layout_constraintTop_toBottomOf="@+id/textoGenero"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/PrimaryColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/error"
                android:visibility="invisible"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/Error"
                android:textSize="15.dp"
                android:background="@color/white"
                android:textColor="@color/error"
                android:fontFamily="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                />
            <Button
                android:id="@+id/botonReintentar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/Reintentar"
                android:backgroundTint="@color/grenn"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>